# hybrid_rag_system

./: README.md  main.py  pyproject.toml
backend/: main.py
backend/app/core/: auth.py  config.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/services/: document_processor.py  rag_pipeline.py
data/: database.db
data/documents/: bm25.pkl
data/faiss_index/: index.faiss  index.pkl
frontend/admin/: app.py
frontend/user/: app.py
