[project]
name = "hybrid-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "flashrank>=0.2.10",
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-ollama",
    "langchain-text-splitters>=0.3.0,<0.4.0",
    "langgraph",
    "loguru>=0.7.3",
    "passlib[argon2]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.5.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "rank-bm25>=0.2.2",
    "sqlmodel>=0.0.31",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]
